April fools port to 1.21.1 [build] [publish]